--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Adicionei mais livros ao carrossel -->
                 <div class="swiper-slide">
                     <div class="book-link" onclick="redirectToLink('https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-15-pt-br/')">
-                        <img src="0.jpg" alt="Mangá Livro 15">
+                        <img src="0.jpg15" alt="Mangá Livro 15">
                         <p>Volume 15 - Uma vida cheia de tensão</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-9')">
-                        <img src="inoshikacho.jpg" alt="Mangá Livro 9">
+                        <img src="inoshikacho.webp" alt="Mangá Livro 9">
                         <p>Volume 9 - A Kyuubi</p>
                     </div>
                 </div>
