--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Adicionei mais livros ao carrossel -->
                 <div class="swiper-slide">
                     <div class="book-link" onclick="redirectToLink('https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-15-pt-br/')">
-                        <img src="0.jpg15" alt="Mangá Livro 15">
+                        <img src="shink.jpg" alt="Mangá Livro 15">
                         <p>Volume 15 - Uma vida cheia de tensão</p>
                     </div>
                 </div>
