--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-</html>  
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -35,12 +34,10 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
-    <!-- Carrossel de Novos Lançamentos -->
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos Lançamentos</h2>
         <div class="swiper">
             <div class="swiper-wrapper">
-                <!-- Adicionei mais livros ao carrossel -->
                 <div class="swiper-slide">
                     <div class="book-link" onclick="redirectToLink('https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-15-pt-br/')">
                         <img src="shink.jpg" alt="Mangá Livro 15">
@@ -89,71 +86,123 @@
                         <p>Volume 8 - Assuntos triviais</p>
                     </div>
                 </div>
-                </div>
- <!-- Carrossel de Novos Lançamentos -->
- <section class="carrossel">
-    <h2 class="carrossel__titulo">Mais antigos</h2>
-    <div class="swiper">
-        <div class="swiper-wrapper">
-            <!-- Adicionei mais livros ao carrossel -->
-            <div class="swiper-slide">  <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-1https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-1/')">
-                <img src="borutin.webp" alt="Mangá Boruto: Two Blue Vortex Volume 1">
-                <p>Volume 1 - Boruto</p>
             </div>
         </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-2')">
-                <img src="filha do sasuke.webp" alt="Capa do segundo volume">
-                <p>Volume 2 - Arvore.</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-3')">
-                <img src="hima1.jpg" alt="Mangá sobre aventuras de Boruto">
-                <p>Volume 3 - Uzuhiko</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-4')">
-                <img src="kawaki.jpg" alt="Mangá Capítulo 4">
-                <p>Volume 4 - Despertar</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-5')">
-                <img src="sasuke (2).jpg" alt="Mangá sobre Portugol">
-                <p>Volume 5 - Alvo</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-6')">
-                <img src="shikamaru.webp" alt="Mangá sobre acessibilidade">
-                <p>Volume 6 - Três Anos</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-7')">
-                <img src="mitisuki.jpg" alt="Mangá Livro 7">
-                <p>Volume 7 -  O Paradeiro do Sol</p>
-                </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     </section>
-</p>
-<section class="banner">
-    <h2 class="banner__titulo"></h2>
-    <p class="banner__texto">Encontre na nossa estante as melhores histórias para seu desenvolvimento e entretenimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Cadastre seu email">
-</section>
+
+    <section class="tópicos">
+        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos__lista">
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Poder</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Manipulação</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Persuasão</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Auto-ajuda</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Psicanálise</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Conhecimento</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Segredos Ricos</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Filosofia</a></li>
+        </ul>
+    </section>
+
+    <section class="contato">
+        <div class="contato__descrição">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+
+    <hr />
+
+    <footer class="rodapé">
+        <h2 class="rodapé__titulo">Grupo Cassiano</h2>
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo">Educação</li>
+            <li class="lista-rodapé__item">
+                <img src="img/Caelum.svg" alt="Logo da Caelum" />
+                <a href="#" class="lista-rodapé__link">Caelum</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código" />
+                <a href="#" class="lista-rodapé__link">Casa do Código</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo">Educação online</li>
+            <li class="lista-rodapé__item">
+                <img src="img/Alura.svg" alt="Logo da Alura" />
+                <a href="#" class="lista-rodapé__link">Alura</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraEmpresas.svg" alt="Logo da AluraParaEmpresas" />
+                <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam" />
+                <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraStart.svg" alt="Logo da Alura START" />
+                <a href="#" class="lista-rodapé__link">Alura Start</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/MusicDot.svg" alt="Logo da Music Dot" />
+                <a href="#" class="lista-rodapé__link">Music Dot</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua" />
+                <a href="#" class="lista-rodapé__link">Alura Língua</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/PM3.svg" alt="Logo da PM3" />
+                <a href="#" class="lista-rodapé__link">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo">Comunidade</li>
+            <li class="lista-rodapé__item">
+                <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech" />
+                <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev" />
+                <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech" />
+                <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/LikeABoss.svg" alt="Logo do Like a Boss" />
+                <a href="#" class="lista-rodapé__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras" />
+                <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs" />
+                <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/GUJ.svg" alt="Logo do GUJ" />
+                <a href="#" class="lista-rodapé__link">GUJ</a>
+            </li>
+        </ul>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper(".swiper", {
             spaceBetween: 10,
             slidesPerView: 3,
             pagination: {
-                el: ".swiper-pagination",
-                type: "bullets",
+                el: '.swiper-pagination',
+                type: 'bullets',
             },
             navigation: {
                 nextEl: '.swiper-button-next',
@@ -184,3 +233,4 @@
 </body>
 
 </html>
+
