--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-</html>  
-<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -39,7 +37,6 @@
         <h2 class="carrossel__titulo">Novos Lançamentos</h2>
         <div class="swiper">
             <div class="swiper-wrapper">
-                <!-- Adicionei mais livros ao carrossel -->
                 <div class="swiper-slide">
                     <div class="book-link" onclick="redirectToLink('https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-15-pt-br/')">
                         <img src="shink.jpg" alt="Mangá Livro 15">
@@ -88,63 +85,60 @@
                         <p>Volume 8 - Assuntos triviais</p>
                     </div>
                 </div>
-                </div>
- <!-- Carrossel de Novos Lançamentos -->
- <section class="carrossel">
-    <h2 class="carrossel__titulo">Mais antigos</h2>
-    <div class="swiper">
-        <div class="swiper-wrapper">
-            <!-- Adicionei mais livros ao carrossel -->
-            <div class="swiper-slide">  <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-1https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-1/')">
-                <img src="borutin.webp" alt="Mangá Boruto: Two Blue Vortex Volume 1">
-                <p>Volume 1 - Boruto</p>
             </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-2')">
-                <img src="filha do sasuke.webp" alt="Capa do segundo volume">
-                <p>Volume 2 - Arvore.</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-3')">
-                <img src="hima1.jpg" alt="Mangá sobre aventuras de Boruto">
-                <p>Volume 3 - Uzuhiko</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-4')">
-                <img src="kawaki.jpg" alt="Mangá Capítulo 4">
-                <p>Volume 4 - Despertar</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-5')">
-                <img src="sasuke (2).jpg" alt="Mangá sobre Portugol">
-                <p>Volume 5 - Alvo</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-6')">
-                <img src="shikamaru.webp" alt="Mangá sobre acessibilidade">
-                <p>Volume 6 - Três Anos</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-7')">
-                <img src="mitisuki.jpg" alt="Mangá Livro 7">
-                <p>Volume 7 -  O Paradeiro do Sol</p>
-                </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
         </div>
     </section>
-</p>
-<section class="banner">
-    <h2 class="banner__titulo"></h2>
-    <p class="banner__texto">Encontre na nossa estante as melhores histórias para seu desenvolvimento e entretenimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Cadastre seu email">
-</section>
+
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais antigos</h2>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://mangaonline.blog/manga/boruto-two-blue-vortex-manga-pt-br/capitulo-1/')">
+                        <img src="borutin.webp" alt="Mangá Boruto: Two Blue Vortex Volume 1">
+                        <p>Volume 1 - Boruto</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-2')">
+                        <img src="filha do sasuke.webp" alt="Capa do segundo volume">
+                        <p>Volume 2 - Arvore.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-3')">
+                        <img src="hima1.jpg" alt="Mangá sobre aventuras de Boruto">
+                        <p>Volume 3 - Uzuhiko</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-4')">
+                        <img src="kawaki.jpg" alt="Mangá Capítulo 4">
+                        <p>Volume 4 - Despertar</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-5')">
+                        <img src="sasuke (2).jpg" alt="Mangá sobre Portugol">
+                        <p>Volume 5 - Alvo</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-6')">
+                        <img src="shikamaru.webp" alt="Mangá sobre acessibilidade">
+                        <p>Volume 6 - Três Anos</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="book-link" onclick="redirectToLink('https://slimeread.com/ler/10877/cap-7')">
+                        <img src="mitisuki.jpg" alt="Mangá Livro 7">
+                        <p>Volume 7 - O Paradeiro do Sol</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper(".swiper", {
