--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="tópicos">
         <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="tópicos__lista">
-            <li class="tópicos__item"><a href="#" class="tópicos__link">Poder</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">poder</a></li>
             <li class="tópicos__item"><a href="#" class="tópicos__link">Manipulação</a></li>
             <li class="tópicos__item"><a href="#" class="tópicos__link">Persuasão</a></li>
             <li class="tópicos__item"><a href="#" class="tópicos__link">Auto-ajuda</a></li>
@@ -116,7 +116,7 @@
     <hr />
 
     <footer class="rodapé">
-        <h2 class="rodapé__titulo">Grupo Cassiano</h2>
+        <h2 class="rodapé__titulo">Grupo Joaquim</h2>
      
     </script>
 </body>
