--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <hr />
 
     <footer class="rodapé">
-        <h2 class="rodapé__titulo">Grupo Cassiano</h2>
+        <h2 class="rodapé__titulo">Grupo Joaquim</h2>
     </script>
 </body>
 
